# parser_template

./: pyproject.toml  readme.md
config/: settings.py  settings.toml
src/parser/: main.py
