[project]
name = "parser_template"
version = "0.1.0"
description = "temaplte for one-off parsers"
authors = [
    {name = "Aleksandr",email = "139915362+Ku-Alex-Bo@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dynaconf (>=3.2.11,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
parser = "src.parser.main:main"

[tool.poetry]
packages = [{ include = "parser", from = "src" }]